--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -271,12 +271,12 @@
                                             break;
                                         case 'price':
                                             $column.text(
-                                                (item.price).toLocaleString(...options.format.price)
+                                                (item[item.price_type]).toLocaleString(...options.format.price)
                                             );
                                             break;
                                         case 'total':
                                             $column.text(
-                                                (item.price * item.quantity).toLocaleString(...options.format.price)
+                                                (item[item.price_type] * item.quantity).toLocaleString(...options.format.price)
                                             );
                                             break;
                                         case 'remove':
@@ -314,8 +314,16 @@
                             $items.append(
                                 $('<input ' + options.selectors['cart-data'] + '>')
                                     .attr('type', 'number')
-                                    .attr('name', 'products[' + item.uuid + ']')
+                                    .attr('name', 'products[' + item.uuid + '][count]')
                                     .val(item.quantity)
+                            );
+
+                            // append system line with uuid => price_type
+                            $items.append(
+                                $('<input ' + options.selectors['cart-data'] + '>')
+                                    .attr('type', 'text')
+                                    .attr('name', 'products[' + item.uuid + '][price_type]')
+                                    .val(item.price_type)
                             );
                         }
                     }
@@ -356,19 +364,24 @@
                     let index,
                         defaults = {
                             'uuid': '',
+                            'title': '',
                             'url': '',
                             'thumb': '',
-                            'title': '',
-                            'price': 0,
                             'vendorcode': '',
-                            'group': '',
+                            'price': 0,
+                            'price_wholesale': 0,
+                            'price_wholesale_from': 0,
+                            'price_type': 'price', // price, price_wholesale
                             'quantity': 1,
                             'quantity_step': 1,
+                            'group': '',
                             'type': options.item_type,
                         };
 
                     properties = merge({}, defaults, properties);
                     properties['price'] = properties['price'] ? +properties['price'] : 0;
+                    properties['price_wholesale'] = properties['price_wholesale'] ? +properties['price_wholesale'] : 0;
+                    properties['price_wholesale_from'] = properties['price_wholesale_from'] ? +properties['price_wholesale_from'] : 0;
                     properties['quantity'] = properties['quantity'] ? +properties['quantity'] : 1;
                     properties['quantity_step'] = properties['quantity_step'] ? +properties['quantity_step'] : 1;
 
@@ -397,14 +410,8 @@
                 cartItemIncrement(value, field = 'uuid') {
                     let index = this.cartFindItemByField(value, field);
 
-                    if (cart[index].quantity <= 0) {
-                        this.cartRemoveItemById(index);
-                    }
-
                     if (index >= 0) {
-                        cart[index].quantity += cart[index].quantity_step || 1;
-                        triggerEvent('cart:update', cart[index]);
-                        saveCartData(cart);
+                        this.cartItemChangeCountById(index, cart[index].quantity + (cart[index].quantity_step || 1));
                     }
                 }
 
@@ -417,14 +424,7 @@
                     let index = this.cartFindItemByField(value, field);
 
                     if (index >= 0) {
-                        cart[index].quantity -= cart[index].quantity_step || 1;
-
-                        if (cart[index].quantity <= 0) {
-                            this.cartRemoveItemById(index);
-                        }
-
-                        triggerEvent('cart:update', cart[index]);
-                        saveCartData(cart);
+                        this.cartItemChangeCountById(index, cart[index].quantity - (cart[index].quantity_step || 1));
                     }
                 }
 
@@ -438,7 +438,27 @@
                     let index = this.cartFindItemByField(value, field);
 
                     if (index >= 0) {
+                        this.cartItemChangeCountById(index, count);
+                    }
+                }
+
+                /**
+                 * Change item quantity by id
+                 * @param index
+                 * @param count
+                 */
+                cartItemChangeCountById(index, count) {
+                    if (index >= 0 && cart[index]) {
                         cart[index].quantity = +count;
+
+                        if (
+                            cart[index].price_wholesale_from > 0 &&
+                            cart[index].quantity >= cart[index].price_wholesale_from
+                        ) {
+                            cart[index].price_type = 'price_wholesale';
+                        } else {
+                            cart[index].price_type = 'price';
+                        }
 
                         if (cart[index].quantity <= 0) {
                             this.cartRemoveItemById(index);
