--- a/theme/default/catalog.mail.client.twig
+++ b/theme/default/catalog.mail.client.twig
@@ -526,7 +526,7 @@
                                                                                                         </td>
                                                                                                         <td valign="top" class="img" width="10" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
                                                                                                         <td class="text-12 c-grey4 mt-right" style="font-size:12px; line-height:18px; font-family:'Motiva Sans', Arial, sans-serif; text-align:left; color:#f1f1f1;" valign="top">
-                                                                                                            <strong>{{ order.user ? order.user.getName() : order.delivery.client }}</strong>
+                                                                                                            <strong>{{ order.delivery.client }}</strong>
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     </tbody>
@@ -543,7 +543,7 @@
                                                                                                         </td>
                                                                                                         <td valign="top" class="img" width="10" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
                                                                                                         <td class="text-12 c-grey4 mt-right" style="font-size:12px; line-height:18px; font-family:'Motiva Sans', Arial, sans-serif; text-align:left; color:#f1f1f1;" valign="top">
-                                                                                                            <strong>{{ order.user and order.user.phone ? order.user.phone : order.phone }}</strong>
+                                                                                                            <strong>{{ order.phone }}</strong>
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     </tbody>
@@ -560,7 +560,7 @@
                                                                                                         </td>
                                                                                                         <td valign="top" class="img" width="10" style="font-size:0pt; line-height:0pt; text-align:left;"></td>
                                                                                                         <td class="text-12 c-grey4 mt-right" style="font-size:12px; line-height:18px; font-family:'Motiva Sans', Arial, sans-serif; text-align:left; color:#f1f1f1;" valign="top">
-                                                                                                            <strong>{{ order.user and order.user.email ? order.user.email : order.email }}</strong>
+                                                                                                            <strong>{{ order.email }}</strong>
                                                                                                         </td>
                                                                                                     </tr>
                                                                                                     </tbody>
