--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -434,6 +434,9 @@
     <script src="/assets/js/core/bootstrap-tagsinput.min.js?v={{ SHA }}"></script>
     <script src="/assets/js/core/moment.min.js?v={{ SHA }}"></script>
     <script src="/assets/js/core/moment-with-locales.min.js?v={{ SHA }}"></script>
+    <script src="/assets/js/core/moment-timezone-with-data.js?v={{ SHA }}"></script>
+
+    <script>moment.locale('{{ _language }}')</script>
 
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js?v={{ SHA }}"></script>
     <script src="/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js?v={{ SHA }}"></script>
