--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -1,116 +1,24 @@
 {% extends 'layout.twig' %}
 
+{% set title = 'WebSpace Engine' %}
+
 {% block head %}
-    <meta name="description" content="{{ parameter('common_description') }}">
-    <meta name="keywords" content="{{ parameter('common_keywords') }}">
-    <link rel="canonical" href="{{ parameter('common_homepage') }}"/>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
 
-    <!-- Favicon -->
-    <link href="/shopgrid/favicon.svg" rel="shortcut icon" />
-
-    <link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tiny-slider@2.9.4/dist/tiny-slider.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="/default/css/main.css" />
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 {% endblock %}
 
 {% block body %}
     <body>
-        <!--[if lte IE 9]>
-        <p class="browserupgrade">
-            You are using an <strong>outdated</strong> browser. Please
-            <a href="https://browsehappy.com/">upgrade your browser</a> to improve
-            your experience and security.
-        </p>
-        <![endif]-->
-
-        <!-- Preloader -->
-        <div class="preloader">
-            <div class="preloader-inner">
-                <div class="preloader-icon">
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </div>
-        <!-- /End Preloader -->
-
-        {% block bodyinner %}
-            {% include 'common/header.twig' %}
-
-            {% block page %}
-                <script>
-                    window.catalog = {
-                        events: {
-                            'on:cart:add': (new_item) => {
-                                Swal.fire({
-                                    title: 'Product added to cart',
-                                    text: new_item.title + ' (x' + new_item.quantity + ') now in cart.',
-                                    icon: 'success',
-                                    showCancelButton: true,
-                                    cancelButtonText: 'Continue shopping',
-                                    cancelButtonColor: '#0167F3',
-                                    confirmButtonText: 'Checkout',
-                                    confirmButtonColor: '#081828'
-                                }).then((result) => {
-                                    if (result.value) {
-                                        location.href = '/cart';
-                                    }
-                                });
-                            },
-                            'on:cart:update': (updated_item) => {
-                                Swal.fire({
-                                    title: 'Cart updated',
-                                    text: updated_item.title + ' (x' + updated_item.quantity + ')',
-                                    icon: 'success',
-                                    showCancelButton: true,
-                                    cancelButtonText: 'Continue shopping',
-                                    cancelButtonColor: '#0167F3',
-                                    confirmButtonText: 'Checkout',
-                                    confirmButtonColor: '#081828'
-                                }).then((result) => {
-                                    if (result.value) {
-                                        location.href = '/cart';
-                                    }
-                                });
-                            }
-                        }
-                    }
-                </script>
-
-                {% include 'components/hero.twig' %}
-                {% include 'components/categories.twig' %}
-                {% include 'components/products.twig' %}
-                {% include 'components/banners.twig' %}
-                {% include 'components/special-offer.twig' %}
-                {% include 'components/products-list.twig' %}
-                {% include 'components/banners.twig' %}
-                {% include 'components/blog.twig' %}
-                {% include 'components/shipping.twig' %}
-            {% endblock %}
-
-            {% include 'common/footer.twig' %}
-
-            <!-- ========================= scroll-top ========================= -->
-            <a href="#" class="scroll-top">
-                <i class="lni lni-chevron-up"></i>
-            </a>
+    {% block bodyinner %}
+        {% block page %}
+            Default page
         {% endblock %}
-
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/tiny-slider@2.9.4/dist/min/tiny-slider.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/js/glightbox.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.9/sweetalert2.all.min.js"></script>
-        <script src="/default/js/main.js"></script>
-
-        {% include 'mixin/img-script.twig' %}
-        {#{% include 'mixin/adbd.twig' %}#}
-        {#{% include 'mixin/cookies.twig' %}#}
-        {% include 'mixin/catalog.twig' %}
-        {% include 'mixin/recaptcha.twig' %}
+    {% endblock %}
     </body>
 {% endblock %}
+
