--- a/src/Template/cup/catalog/order/status/form.twig
+++ b/src/Template/cup/catalog/order/status/form.twig
@@ -31,7 +31,7 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Order'|locale,
+                                    'label': 'Sort order'|locale,
                                     'type': 'number',
                                     'name': 'order',
                                     'args': {
