add flexibility delay

--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -49,6 +49,9 @@
                         container: 'cart-container',
                     },
 
+                    // before redirect
+                    delay: 10,
+
                     // cart handler url
                     url: '',
                 },
@@ -575,7 +578,9 @@
 
                             if (res && res.redirect) {
                                 this.cartRemoveAll();
-                                location = res.redirect;
+
+                                // flexibility
+                                setTimeout(() => location = res.redirect, options.cart.delay);
                             }
                         }
                     });
