--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -121,7 +121,7 @@
                                         </div>
 
                                         <div class="text-black-50 float-right d-none d-lg-inline">
-                                            {% if user.getAllowMail() %}
+                                            {% if user.allow_mail %}
                                                 <i class="fa fa-envelope" data-toggle="tooltip" data-placement="right" title="{{ 'Subscribed to newsletter'|locale }}"></i>
                                             {% endif %}
                                         </div>
